--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<div>
+		<p>My current favourite song is [janasena party]</p>
+		<a>https://youtu.be/KTWjNQzNNzw?si=4cIzK6sAEjahSHhZ</a>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
