--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<div>
 		<p>My current favourite song is [janasena party]</p>
-		<a>https://youtu.be/KTWjNQzNNzw?si=4cIzK6sAEjahSHhZ</a>
+		<a href=https://youtu.be/KTWjNQzNNzw?si=4cIzK6sAEjahSHhZ></a>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
